Remove an unused QuicStreamFactory::Job constructor

Removes an unused Job constructor and add const-ness to a few member fields.

BUG=704953

Review-Url: https://codereview.chromium.org/2789403002
Cr-Commit-Position: refs/heads/master@{#462130}

Former-commit-id: 385c750bda55aeca96a2b55c30d1f56b6a816f57